ci/tutor-deploy/environments/prod/k8s/ingress.yml
#------------------------------------------------------------------------------
# written by: Miguel Afonso
#             https://www.linkedin.com/in/mmafonso/
#
# date: Aug-2021
#
# usage: setup nginx for EKS load balancer.
#        see https://cert-manager.io/docs/
#------------------------------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minischool-global-prod
  namespace: minischool-global-prod
  annotations:
    # mcdaniel
    # https://www.cyberciti.biz/faq/nginx-upstream-sent-too-big-header-while-reading-response-header-from-upstream/
    # to fix "[error] 199#199: *15739 upstream sent too big header while reading response header from upstream"
    # ---------------------
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "512k"
    nginx.ingress.kubernetes.io/proxy-buffers: "4 512k"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
    # ---------------------
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - "courses.minischool.co.in"
    - "*.courses.minischool.co.in"
    secretName: wild-openedx-prod-tls
  rules:
  - host: courses.minischool.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lms
            port:
              number: 8000
  - host: studio.courses.minischool.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cms
            port:
              number: 8000
  - host: discovery.courses.minischool.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: discovery
            port:
              number: 8000

  - host: notes.courses.minischool.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes
            port:
              number: 8120

  - host: apps.courses.minischool.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mfe
            port:
              number: 8002

  - host: ecommerce.courses.minischool.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ecommerce
            port:
              number: 8000
  - host: orders.courses.minischool.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mfe
            port:
              number: 8002

  - host: credentials.courses.minischool.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: credentials
            port:
              number: 8000

  - host: subscriptions.courses.minischool.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: license-manager
            port:
              number: 8000
